# task-cli

./: README.md  Task.py  TaskManager.py  pyproject.toml  task-cli.py
src/: TaskManager.py  task-cli.bat  task-cli.py
task-cli/: TaskNotFoundError.py
task_cli/: Task.py  TaskManager.py  main.py
task_cli/tests/: test_task_manager.py
