[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "task-cli"
version = "0.1.0"
description = "A simple task CLI"
authors = [{ name="Terrance Ho" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tabulate>=0.9.0"
]

[project.scripts]
task-cli = "task_cli.main:main"